<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="settings_preference_fragment">


    <SwitchPreference
            android:summaryOn="@string/responder_enabled_summary_on"
            android:summaryOff="@string/responder_enabled_summary_off"
            android:title="@string/responder_enabled_title"
            android:key="@string/responder_enabled_key"
            android:defaultValue="@bool/responder_enabled_default_value"/>


    <SwitchPreference
            android:summaryOn="@string/auto_response_to_sms_enabled_summary_on"
            android:summaryOff="@string/auto_response_to_sms_enabled_summary_off"
            android:title="@string/auto_response_to_sms_enabled_title"
            android:key="@string/auto_response_to_sms_enabled_key"
            android:defaultValue="@bool/auto_response_to_sms_enabled_default_value"
            android:dependency="@string/responder_enabled_key"/>

    <EditTextPreference
            android:dialogTitle="@string/auto_response_to_sms_template_title"
            android:key="@string/auto_response_to_sms_template_key"
            android:summary="@string/auto_response_to_sms_template_summary"
            android:defaultValue="@string/auto_response_to_sms_template_default_value"
            android:title="@string/auto_response_to_sms_template_title"
            android:dependency="@string/responder_enabled_key"
            />

    <SwitchPreference
            android:summaryOn="@string/auto_response_to_call_enabled_summary_on"
            android:summaryOff="@string/auto_response_to_call_enabled_summary_off"
            android:title="@string/auto_response_to_call_enabled_title"
            android:key="@string/auto_response_to_call_enabled_key"
            android:defaultValue="@bool/auto_response_to_call_enabled_default_value"
            android:dependency="@string/responder_enabled_key"/>

    <EditTextPreference
            android:dialogTitle="@string/auto_response_to_call_template_title"
            android:key="@string/auto_response_to_call_template_key"
            android:summary="@string/auto_response_to_call_template_summary"
            android:defaultValue="@string/auto_response_to_call_template_default_value"
            android:title="@string/auto_response_to_call_template_title"
            android:dependency="@string/auto_response_to_call_enabled_key"
            />

    <SwitchPreference
            android:summaryOn="@string/geolocation_request_enabled_summary_on"
            android:summaryOff="@string/geolocation_request_enabled_summary_off"
            android:title="@string/geolocation_request_enabled_title"
            android:key="@string/geolocation_request_enabled_key"
            android:defaultValue="@bool/geolocation_request_enabled_default_value"
            android:dependency="@string/auto_response_to_sms_template_key"/>


    <EditTextPreference
            android:dialogTitle="@string/auto_response_to_sms_with_geolocation_template_title"
            android:key="@string/auto_response_to_sms_with_geolocation_template_key"
            android:summary="@string/auto_response_to_sms_with_geolocation_template_summary"
            android:defaultValue="@string/auto_response_to_sms_with_geolocation_template_default_value"
            android:title="@string/auto_response_to_sms_with_geolocation_template_title"
            android:dependency="@string/geolocation_request_enabled_key"/>

    <SwitchPreference
            android:summaryOn="@string/showing_pending_notification_enabled_summary_on"
            android:summaryOff="@string/showing_pending_notification_enabled_summary_on"
            android:title="@string/showing_pending_notification_enabled_title"
            android:key="@string/showing_pending_notification_enabled_key"
            android:defaultValue="@bool/showing_pending_notification_enabled_default_value"
            android:dependency="@string/responder_enabled_key"/>


    <SwitchPreference
            android:summaryOn="@string/showing_summary_notification_enabled_summary_on"
            android:summaryOff="@string/showing_summary_notification_enabled_summary_on"
            android:title="@string/showing_summary_notification_enabled_title"
            android:key="@string/showing_summary_notification_enabled_key"
            android:defaultValue="@bool/showing_summary_notification_enabled_default_value"
            android:dependency="@string/responder_enabled_key"/>

    <EditTextPreference
            android:dialogTitle="@string/geolocation_request_pattern_1_title"
            android:key="@string/geolocation_request_pattern_1_key"
            android:summary="@string/geolocation_request_pattern_1_summary"
            android:defaultValue="@string/geolocation_request_pattern_1_default_value"
            android:title="@string/geolocation_request_pattern_1_title"
            android:dependency="@string/geolocation_request_enabled_key"/>


    <EditTextPreference
            android:dialogTitle="@string/geolocation_request_pattern_2_title"
            android:key="@string/geolocation_request_pattern_2_key"
            android:summary="@string/geolocation_request_pattern_2_summary"
            android:defaultValue="@string/geolocation_request_pattern_2_default_value"
            android:title="@string/geolocation_request_pattern_2_title"
            android:dependency="@string/geolocation_request_enabled_key"/>


</PreferenceScreen>
